eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-bank-api-deployment
  labels:
    app: self-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: self-bank-api
  template:
    metadata:
      labels:
        app: self-bank-api
    spec:
      containers:
        - name: self-bank-api
          image: 442426881067.dkr.ecr.us-east-1.amazonaws.com/selfbank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
