eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selfbank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "api.adarsh.click"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: selfbank-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.adarsh.click
      secretName: selfbank-api-cert
